apps/redpanda/50.Service.yml
kind: Service
apiVersion: v1
metadata:
  name: rp-console
  namespace: redpanda
  labels:
    app.kubernetes.io/component: redpanda
    app.kubernetes.io/name: rp-console
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: rp-console
  selector:
    app.kubernetes.io/component: redpanda
    app.kubernetes.io/name: rp-console
  sessionAffinity: None
  type: ClusterIP
